# phones-shop

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  sample.env
config/: celery.py  settings.py  urls.py
core/: context_processors.py
core/admin/: __init__.py  brand.py  category.py  color.py  profile.py  size.py
core/management/commands/: samples.py
core/migrations/: 0001_initial.py  0002_brand_image_brand_name_ar_alter_brand_body_and_more.py  0003_category_name_ar_alter_category_body_and_more.py
core/models/: __init__.py  brand.py  category.py  color.py  currency.py  identifiers.py  profile.py  size.py  time_stamped.py
core/templatetags/: format_tags.py
core/utils/: common.py  vars.py
fixtures/: brand.json  category.json  color.json  product.json  size.json
locale/ar/LC_MESSAGES/: django.mo  django.po
main/: apps.py  backends.py  urls.py
main/admin/: __init__.py  product.py  review.py
main/forms/: auth.py
main/migrations/: 0001_initial.py  0002_product_description_ar_product_name_ar_and_more.py
main/models/: __init__.py  product.py  review.py
main/views/: __init__.py  home.py  pages.py  product.py
static/assets/css/: custom.css  default.css  responsive.css  (+2 more)
templates/: about.html  base.html  contact.html  home.html  product.html  product_detail.html  product_details.html
templates/includes/: brand-logo.html  footer.html  header.html  messages.html  pagination.html  product_filters.html  product_single.html  slider.html
themeforest-aRsKR4RQ-hurst-ecommerce-furniture-template/: change-log.txt
(+1 files in other folders)
